<resources>
    <string name="pix_selection_limiter">Can\'t select more than %d items.</string>
    <string name="pix_bottom_message_without_video">Drag images up for gallery</string>
    <string name="pix_bottom_message_with_video">Hold for video, tap for photo</string>
    <string name="pix_ok">OK</string>
    <string name="pix_tap_to_select">Tap photo to select</string>
    <string name="pix_selected">Selected</string>
    <string name="pix_recent">Recent</string>
    <string name="pix_last_month">Last Month</string>
    <string name="pix_last_week">Last Week</string>
    <string name="pix_counter_number">0:00</string>
    <!-- content descriptions -->
    <string name="click_button">click button</string>
    <string name="camera_flash_button">camera flash button</string>
    <string name="lens_facing_button">lens facing button</string>
</resources>
