<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.camera.view.PreviewView
        android:id="@+id/viewFinder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:scaleType="fitCenter" />

    <FrameLayout
        android:id="@+id/grid_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:visibility="gone"
            android:id="@+id/status_bar_bg"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_top"
            android:background="@color/primary_color_pix"
            android:translationY="@dimen/margin_top_nve" />


        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/main_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="1">

            <FrameLayout
                android:id="@+id/bottom_sheet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="-2px"
                app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="-2px"
                    android:layout_marginTop="@dimen/small_thumb"
                    android:background="@color/surface_color_pix"
                    android:orientation="vertical"
                    android:visibility="invisible"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager" />

                <TextView
                    android:id="@+id/fastscroll_bubble"
                    android:layout_width="140dp"
                    android:layout_height="33dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="64dp"
                    android:layout_marginRight="52dp"
                    android:background="@drawable/trigger"
                    android:elevation="10dp"
                    android:gravity="center"
                    android:maxLines="1"
                    android:textSize="14sp"
                    android:visibility="gone"
                    tools:textColor="#000" />

                <FrameLayout
                    android:id="@+id/fastscroll_scrollbar"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:layout_marginTop="@dimen/small_thumb"
                    android:minWidth="20dp"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/fastscroll_track"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="right"
                        android:minWidth="45dp"
                        tools:ignore="ContentDescription" />


                    <ImageView
                        android:id="@+id/fastscroll_handle"
                        android:layout_width="40dp"
                        android:layout_height="50dp"
                        android:layout_gravity="right"
                        android:elevation="12dp"
                        android:minWidth="20dp"
                        android:paddingLeft="5dp"
                        android:src="@drawable/handle" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="82dp">

                    <FrameLayout
                        android:id="@+id/topbar"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/small_thumb"
                        android:background="@color/surface_color_pix"
                        android:visibility="gone">

                        <ImageView
                            android:id="@+id/selection_back"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:paddingLeft="15dp"
                            android:src="@drawable/ic_arrow_back_black_24dp" />

                        <TextView
                            android:id="@+id/selection_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical|left"
                            android:layout_marginLeft="50dp"
                            android:layout_marginRight="10dp"
                            android:gravity="center_vertical"
                            android:textColor="#fff"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/selection_ok"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical|right"
                            android:gravity="center_vertical"
                            android:padding="20dp"
                            android:text="@string/pix_ok"
                            android:textColor="#fff"
                            android:textSize="12sp" />

                        <ImageView
                            android:id="@+id/selection_check"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical|right"
                            android:layout_marginRight="20dp"
                            android:gravity="center_vertical"
                            android:src="@drawable/ic_check_box" />
                    </FrameLayout>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/initial_recyclerview_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/arrow_up"
                            android:visibility="gone"
                            android:layout_width="20dp"
                            android:layout_height="16dp"
                            android:layout_gravity="bottom|center_horizontal"
                            android:background="@drawable/ic_expand_less_black_24dp" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/instantRecyclerView"
                            android:layout_width="match_parent"
                            android:layout_height="82dp"
                            android:orientation="horizontal"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
                    </androidx.appcompat.widget.LinearLayoutCompat>


                </FrameLayout>
            </FrameLayout>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <FrameLayout
            android:id="@+id/sendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|bottom"
            android:visibility="gone">

            <ImageView
                android:layout_width="@dimen/small_thumb"
                android:layout_height="@dimen/small_thumb"
                android:background="@drawable/circular_button"
                android:padding="12dp"
                android:src="@drawable/ic_check_black_24dp" />

            <TextView
                android:id="@+id/img_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|bottom"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:padding="5dp"
                android:textColor="#fff"
                android:textSize="12sp" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/controls_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom">

            <ImageView
                android:id="@+id/primary_click_background"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center|bottom"
                android:layout_marginBottom="40dp"
                android:background="@drawable/red_circle"
                android:contentDescription="@string/click_button"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/primary_click_button"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center|bottom"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/ring"
                android:contentDescription="@string/click_button" />

            <FrameLayout
                android:id="@+id/flash_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="top|left"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="47dp"
                android:background="@drawable/circle"
                android:padding="11dp"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/flash_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/camera_flash_button"
                    android:src="@drawable/ic_flash_off_black_24dp" />
            </FrameLayout>

            <ImageView
                android:id="@+id/lens_facing"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="top|right"
                android:layout_marginTop="47dp"
                android:layout_marginRight="50dp"
                android:background="@drawable/circle"
                android:contentDescription="@string/lens_facing_button"
                android:padding="11dp"
                android:src="@drawable/ic_photo_camera" />

            <TextView
                android:id="@+id/message_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_marginBottom="5dp"
                android:text="@string/pix_bottom_message_without_video"
                android:textColor="#fff"
                android:textSize="12sp" />

        </FrameLayout>

    </FrameLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/permissions_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.MaterialComponents.Light"
        android:layout_gravity="center"
        android:layout_margin="24dp"
        android:visibility="gone"
        app:cardElevation="0dp"
        app:strokeWidth="1dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="24dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Permissions Denied" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="Approve permissions to utilise pix image picker" />

            <Button
                android:id="@+id/permissionButton"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:text="Ask Again" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </com.google.android.material.card.MaterialCardView>



</FrameLayout>